# dcman

./: .pre-commit-config.yaml  README.md  dcman.py  flake.nix  pyproject.toml
