[project]
name = "dcman"
version = "0.1.0"
description = "Docker Compose Manager - A TUI tool to manage multiple docker-compose projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=7.0",
    "pyyaml>=6.0",
]

[tool.ruff]
lint.select = [
    "F",       # Pyflakes
    "E",       # pycodestyle: Errors
    "W",       # pycodestyle: Warnings
    "I",       # isort
    "YTT",     # flake-2020
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "T10",     # flake8-debugger
    "SIM",     # flake8-simplify
    "ERA",     # eradicate
    "RUF",     # Ruff-specific rules
    "UP",      # pyupgrade
    "G",       # flake8-logging-format
    "PLC0415", # prevent local imports
    "ASYNC",   # asyncio best practices
    "ANN",     # type annotation issues
]
line-length = 88
target-version = "py310"

[tool.ty.src]
# Include source and test files
include = ["**/*.py"]

# Exclude generated and cache directories
exclude = ["**/__pycache__", "**/.pytest_cache"]

# Respect .gitignore files
respect-ignore-files = true

[tool.ty.rules]
# Rule severities can be configured here after initial run
# Example: possibly-unresolved-reference = "warn"

[tool.ty.terminal]
# Use full output format for detailed diagnostics
output-format = "full"
